<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Infogue</string>
    <string name="title_activity_featured">Featured</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_application">Infogue.id</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_search">Search Result</string>
    <string name="title_activity_follower">Followers</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_article">Article</string>
    <string name="title_activity_article_featured">Featured Article</string>
    <string name="title_activity_article_create">Create Article</string>
    <string name="title_activity_article_edit">Edit Article</string>
    <string name="title_activity_post">Article Post</string>
    <string name="title_activity_comment">Leave a Comment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_sign_in">Contributor Sign In</string>
    <string name="title_activity_sign_up">Create an Account</string>
    <string name="title_activity_message">Messages</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="title_activity_withdraw">Withdraw Application</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username_email">Username or Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_title">Title Article</string>
    <string name="prompt_slug">Article Unique Slug</string>
    <string name="prompt_tags">Article Tags</string>
    <string name="prompt_category">Select Category</string>
    <string name="prompt_subcategory">Select Subcategory</string>
    <string name="prompt_content">Write Content Here</string>
    <string name="prompt_excerpt">Optional Excerpt</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_about">About</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="prompt_facebook">Facebook Url</string>
    <string name="prompt_twitter">Twitter Url</string>
    <string name="prompt_googleplus">Google+ Url</string>
    <string name="prompt_instagram">Instagram Url</string>
    <string name="prompt_contact">Contact or Phone</string>
    <string name="prompt_leave_a_comment">Leave a comment</string>
    <string name="prompt_link_title">Link title</string>
    <string name="prompt_link_url">Link URL</string>
    <string name="prompt_image_title">Alternative title</string>
    <string name="prompt_image_link">Image link</string>
    <string name="prompt_message">Type a message here</string>
    <string name="prompt_receiver_empty">Who receive the message?</string>
    <string name="prompt_select_receiver">Type a name or username</string>
    <string name="prompt_account_name">Bank account name</string>
    <string name="prompt_account_number">Bank account number</string>
    <string name="prompt_bank">Select Bank</string>
    <string name="error_server">Oops, Something is getting wrong</string>
    <string name="error_unknown">Unknown error occurred</string>
    <string name="error_timeout">Request server timeout, try again!</string>
    <string name="error_unauthorized">Unauthorized, please login again!</string>
    <string name="error_not_found">Data not found</string>
    <string name="error_no_connection">Failed to connect server</string>
    <string name="error_parse_data">Error parse data</string>
    <string name="error_maintenance">Server currently still maintenance</string>
    <string name="error_creating_session">Creating session failed</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_range">Password must be 6 to 20 characters</string>
    <string name="error_password_confirmed">New Password must be confirmed</string>
    <string name="error_password_current">Current Password needed to save</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_username_invalid">Username only contains alpha dash underscore</string>
    <string name="error_username_length">Username may not be greater than 20 characters</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_email_invalid">Email address is invalid</string>
    <string name="error_email_length">Email may not be greater than 30 characters</string>
    <string name="error_opt_required">%s is required</string>
    <string name="error_opt_min_value" formatted="false">%s may not be greater than %s</string>
    <string name="error_opt_max_value" formatted="false">%s may not be less than %s</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_name_person">Invalid person name character</string>
    <string name="error_name_length">Name may not be greater than 50 characters</string>
    <string name="error_location_required">Location is required</string>
    <string name="error_location_length">Location may not be greater than 30 characters</string>
    <string name="error_about_required">About is required</string>
    <string name="error_about_length">About may not be greater than 160 characters</string>
    <string name="error_agreement_checked">You must be agree with terms and conditions</string>
    <string name="error_auth_credential">The credential is invalid</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_title_range">Title must be 5 to 75 characters</string>
    <string name="error_category_required">Category is required</string>
    <string name="error_subcategory_required">Sub Category is required</string>
    <string name="error_featured_required">Featured image is required</string>
    <string name="error_tags_required">Tags is required</string>
    <string name="error_slug_required">Slug is required</string>
    <string name="error_slug_invalid">Slug only contains alpha dash underscore</string>
    <string name="error_content_required">Content is required</string>
    <string name="error_excerpt_length">Excerpt may not be greater than 300 characters</string>
    <string name="error_status_invalid">Status only has value Published or Draft</string>
    <string name="error_session_required">Session is empty, please Login again!</string>
    <string name="error_birthday_required">Birthday is required</string>
    <string name="error_birthday_invalid">Birthday is invalid format</string>
    <string name="error_contact_required">Contact is required</string>
    <string name="error_contact_length">Contact may not be greater than 30 characters</string>
    <string name="error_gender_invalid">Gender only has value Male or Female</string>
    <string name="error_facebook_invalid_url">Facebook is invalid URL format</string>
    <string name="error_facebook_invalid_domain">Facebook must begin with domain facebook.com</string>
    <string name="error_facebook_invalid_length">Facebook may not be greater than 30 characters</string>
    <string name="error_twitter_invalid_url">Twitter is invalid URL format</string>
    <string name="error_twitter_invalid_domain">Twitter must begin with domain twitter.com</string>
    <string name="error_twitter_invalid_length">Twitter may not be greater than 30 characters</string>
    <string name="error_google_plus_invalid_url">Google+ is invalid URL format</string>
    <string name="error_google_plus_invalid_domain">Google+ must begin with domain plus.google.com</string>
    <string name="error_google_plus_invalid_length">Google+ may not be greater than 30 characters</string>
    <string name="error_instagram_invalid_url">Instagram is invalid URL format</string>
    <string name="error_instagram_invalid_domain">Instagram must begin with domain instagram.com</string>
    <string name="error_instagram_invalid_length">Instagram may not be greater than 30 characters</string>
    <string name="error_account_name_invalid_length">Bank account name may not be greater than 50 characters</string>
    <string name="error_account_number_invalid_length">Bank account number may not be greater than 15 characters</string>
    <string name="error_comment_required">Comment can\'t be blank</string>
    <string name="error_message_required">Message can\'t be blank</string>
    <string name="label_sign_in">SIGN IN</string>
    <string name="label_get_started">GET STARTED</string>
    <string name="label_create_account">Create an Account</string>
    <string name="label_check_agree"><![CDATA[I agree infogue.id <a href="http://www.infogue.id/terms">terms</a> and <a href="http://www.infogue.id/terms">conditions</a>]]></string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_login_social">Login with Social</string>
    <string name="label_sign_navigation">Sign in to contribute article</string>
    <string name="label_articles">Articles</string>
    <string name="label_followers">Followers</string>
    <string name="label_following">Following</string>
    <string name="label_comments">Comments :</string>
    <string name="label_rating">RATING</string>
    <string name="label_tags">TAGS</string>
    <string name="label_title_basic_info">BASIC INFO</string>
    <string name="label_title_featured">FEATURED</string>
    <string name="label_title_seo">SEARCH ENGINE OPTIMIZATION</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_messages">Messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_search">Search</string>
    <string name="action_article">Article</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_help"><![CDATA[Help & FAQ]]></string>
    <string name="action_rating">Rate App</string>
    <string name="action_followers">Followers</string>
    <string name="action_following">Following</string>
    <string name="action_comment">Comment</string>
    <string name="action_submit_comment">SUBMIT COMMENT</string>
    <string name="action_view">View Article</string>
    <string name="action_browse">Open in Web</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Give 5 Stars</string>
    <string name="menu_home">Home</string>
    <string name="menu_random">Random</string>
    <string name="menu_headline">Headline</string>
    <string name="menu_category">Categories</string>
    <string name="menu_about">About</string>
    <string name="menu_website">Infogue.id</string>
    <string name="menu_rate">Rate App</string>
    <string name="avatar_content_description">Avatar Image</string>
    <string name="featured_content_description">Featured Image</string>
    <string name="delete_content_description">Button Delete</string>
    <string name="placeholder_about">No Description</string>
    <string name="placeholder_name">Anonymous</string>
    <string name="placeholder_location">No Location</string>
    <string name="placeholder_date">DATE</string>
    <string name="placeholder_time_ago">2 hours ago</string>
    <string name="placeholder_message">Hi, good morning, I came across your profile today</string>
</resources>