<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_random"
                    android:icon="@drawable/ic_random"
                    android:title="@string/menu_random" />
                <item
                    android:id="@+id/nav_headline"
                    android:icon="@drawable/ic_headline"
                    android:title="@string/menu_headline" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_category">
        <menu>
            <group android:checkableBehavior="single">

            </group>
        </menu>
    </item>

    <item android:title="@string/menu_about">
        <menu>
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_world"
                android:title="@string/menu_website" />
            <item
                android:id="@+id/nav_rating"
                android:icon="@drawable/ic_star"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
