<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_article"
        android:orderInCategory="100"
        android:title="@string/action_article"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_follower"
        android:orderInCategory="100"
        android:title="@string/action_followers"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_following"
        android:orderInCategory="100"
        android:title="@string/action_following"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_messages"
        android:orderInCategory="100"
        android:title="@string/action_messages"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>
