<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:icon="@drawable/ic_visibility"
        android:title="@string/action_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_browse"
        android:orderInCategory="100"
        android:icon="@drawable/ic_world"
        android:title="@string/action_browse"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:icon="@drawable/ic_star"
        android:title="@string/action_rate"
        app:showAsAction="ifRoom" />
</menu>
