<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sketchproject.infogue.activities.PostActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_browse"
        android:icon="@drawable/ic_world"
        android:orderInCategory="100"
        android:title="@string/action_browse"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_comment"
        android:icon="@drawable/ic_headline"
        android:orderInCategory="100"
        android:title="@string/action_comment"
        app:showAsAction="never" />
</menu>
