<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/space_medium"
    android:background="@drawable/btn_light"
    app:cardCornerRadius="0dp"
    app:cardElevation="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/avatar_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_square"
            app:civ_border_color="#AAFFFFFF"
            app:civ_border_width="4dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/avatar"
            android:layout_toRightOf="@id/avatar"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1"
            android:maxLines="3"
            android:text="@string/placeholder_name"
            android:textColor="@color/primary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/avatar"
            android:layout_toRightOf="@id/avatar"
            android:text="@string/placeholder_date"
            android:textColor="@color/black_overlay"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/avatar"
            android:layout_toRightOf="@id/avatar"
            android:text="@string/placeholder_about"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
