<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/nav_header_margin_top"
        android:src="@drawable/img_logo_medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_navigation"
        android:textColor="@color/colorLight"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_light"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorPrimary" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/button_light"
            android:minHeight="40dp"
            android:text="@string/action_register"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</LinearLayout>
