<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@drawable/btn_light"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/featured_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/dummy_avatar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@id/avatar"
        android:layout_toRightOf="@id/avatar"
        android:ellipsize="end"
        android:text="Angga Ari Wijaya"
        android:textColor="@color/primary"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/avatar"
        android:layout_toRightOf="@id/avatar"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/placeholder_message"
        android:textColor="@color/gray_dark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@id/avatar"
        android:layout_toRightOf="@id/avatar"
        android:text="@string/placeholder_time_ago"
        android:textColor="@color/black_overlay"
        android:textSize="12sp"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/btn_delete"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/delete_content_description"
        android:padding="5dp"
        android:src="@drawable/ic_delete"
        android:tint="@color/gray_light" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:alpha="0.4"
        android:background="@color/gray_light" />


</RelativeLayout>
