<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/appbar_padding_top"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/appbar_padding_top">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/avatar_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/dummy_avatar" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@id/avatar"
        android:layout_toRightOf="@id/avatar"
        android:autoLink="all"
        android:background="@drawable/bg_message_theirs"
        android:padding="10dp"
        android:text="@string/placeholder_message"
        android:textColor="@color/gray_dark"
        android:textSize="14sp" />

    <View
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="12.5dp"
        android:layout_toLeftOf="@id/message"
        android:layout_toStartOf="@id/message"
        android:background="@drawable/arrow_message_theirs" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_toEndOf="@id/avatar"
        android:layout_toRightOf="@id/avatar"
        android:text="@string/placeholder_time_ago"
        android:textColor="@color/black_overlay"
        android:textSize="12sp"
        tools:ignore="SmallSp" />

</RelativeLayout>
